cluster/apps/nginx-rtmp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-rtmp
spec:
  selector:
    matchLabels:
      app: nginx-rtmp
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-rtmp
    spec:
      containers:
      - name: nginx-rtmp
        image: tiangolo/nginx-rtmp:latest-2024-02-12
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        ports:
        - name: rtmp-port
          containerPort: 1935
        - name: http-port
          containerPort: 80
      restartPolicy: Always
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-rtmp-conf
