cluster/apps/nginx-rtmp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: nginx-rtmp
  name: nginx-rtmp
spec:
  selector:
    app: nginx-rtmp
  ports:
  - name: nginx-rtmp-port
    port: 1935
    protocol: TCP
    targetPort: rtmp-port
  - name: nginx-http-port
    port: 8080
    protocol: TCP
    targetPort: http-port
