cluster/apps/nginx-rtmp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-rtmp
spec:
  rules:
  - host: stream.catboy.rest
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-rtmp
            port:
              number: 8080
